--- a/index.html
+++ b/index.html
@@ -14,48 +14,54 @@
             <button>About Us</button>
         </div>
         <div class="mission-second">
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705952553/pexels-andre-furtado-1429395_qbqxid.jpg" alt="">
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705952553/pexels-andre-furtado-1429395_qbqxid.jpg" alt="" />
         </div>
         <div class="mission-thrid">
-            <div class="mission-thrid-logo">
-                <div class="mission-thrid-logo-symbole">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg">
+            <div class="mission-thrid-terms">
+                <div class="mission-thrid-terms-logo">
+                    <div class="mission-thrid-terms-logo-symbole">
+                        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+                    </div>
+                    <div class="mission-thrid-terms-logo-page">
+                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/instagram-genesis_n62mkf.png" alt="instagram" className="media"/></a>
+                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/facebook-genesis_ejsuuu.png" alt="facebook" className="media"/></a>
+                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/whatsapp-genesis_qrftkh.png" alt="whatsapp" className="media"/></a>
+                    </div>
                 </div>
-                <div class="mission-thrid-logo-page">
-                    <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/instagram-genesis_n62mkf.png" alt="instagram" className="media"/></a>
-                    <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/facebook-genesis_ejsuuu.png" alt="facebook" className="media"/></a>
-                    <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/whatsapp-genesis_qrftkh.png" alt="whatsapp" className="media"/></a>
+                <div class="mission-thrid-terms-navigation">
+                    <ul>
+                        <a href="#">Home</a>
+                        <a href="#">Programs</a>
+                        <a href="#">News</a>
+                        <a href="#">Our Team</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Contact Us</a>
+                    </ul>
                 </div>
-                <div class="mission-thrid-policy">
-                    <p>Privacy Policy</p>
-                    <p>cookies Policy</p>
-                    <P></P>
+                <div class="mission-thrid-terms-contact">
+                    <h1>Contact</h1>
+                    <p>Phone number</p>
+                    <p>contact@genesis.com</p>
+                    <p>21 stress genesis,Arizona AA77877</p>
+                    <div class="mission-thrid-terms-contact-name">
+                        <input type="full name" name="full name"placeholder="Full name">
+                    </div>
+                    <div class="mission-thrid-terms-contact-email">
+                        <input type="email" name="email"placeholder="Email">
+                    </div>
+                    <div class="mission-thrid-terms-contact-number">
+                        <input type="phone number" name="phone number"placeholder="Phone number">
+                    </div>
+                    <div class="mission-thrid-terms-contact-message">
+                        <input type="message" name="message" placeholder=".message">
+                    </div>
+                    <button>Send Message</buttn>
                 </div>
             </div>
-            <div class="mission-thrid-navigation">
-                <ul>
-                    <li>Home</li>
-                    <li>Programs</li>
-                    <li>News</li>
-                    <li>Our Team</li>
-                    <li>About us</li>
-                    <li>Contact us</li>
-                </ul>
-            </div>
-            <div class="mission-thrid-contact">
-                <h1>Contact</h1>
-                <p>Phone number</p>
-                <p>contact@genesis.com</p>
-                <p>21 stress genesis,Arizona AA77877</p>
-                <input class="Name" type="Name" name=""placeholder="full Name">
-
-                <input class="Email" type="Email" name=""placeholder="Email">
-
-                <input class="phone number" type="phone number" name=""placeholder="phone number">
-
-                <input class="message" type="message" name=""placeholder=".massage">
-                
-                <button>Send Message</button>
+            <div class="mission-thrid-policy">
+                <p>Privacy Policy</p>
+                <p>Cookies Policy</p>
+                <p>@ 2024 Genesis LLC All right reserved</p>
             </div>
         </div>
         
