--- a/index.html
+++ b/index.html
@@ -5,67 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>genesis</title>
-</head>
+</head>  
 <body>
-    <div class="mission">
-        <div class="mission-frist">
-            <h1>Our mission</h1>
-            <p>Help you rediscover the joy of<br>living and awaken the happines with in you<br></p>
-            <button>About Us</button>
-        </div>
-        <div class="mission-second">
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705952553/pexels-andre-furtado-1429395_qbqxid.jpg" alt="" />
-        </div>
-        <div class="mission-thrid">
-            <div class="mission-thrid-terms">
-                <div class="mission-thrid-terms-logo">
-                    <div class="mission-thrid-terms-logo-symbole">
-                        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
-                    </div>
-                    <div class="mission-thrid-terms-logo-page">
-                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/instagram-genesis_n62mkf.png" alt="instagram" className="media"/></a>
-                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/facebook-genesis_ejsuuu.png" alt="facebook" className="media"/></a>
-                        <a href=""><img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706080390/whatsapp-genesis_qrftkh.png" alt="whatsapp" className="media"/></a>
-                    </div>
-                </div>
-                <div class="mission-thrid-terms-navigation">
-                    <ul>
-                        <a href="#">Home</a>
-                        <a href="#">Programs</a>
-                        <a href="#">News</a>
-                        <a href="#">Our Team</a>
-                        <a href="#">About Us</a>
-                        <a href="#">Contact Us</a>
-                    </ul>
-                </div>
-                <div class="mission-thrid-terms-contact">
-                    <h1>Contact</h1>
-                    <p>Phone number</p>
-                    <p>contact@genesis.com</p>
-                    <p>21 stress genesis,Arizona AA77877</p>
-                    <div class="mission-thrid-terms-contact-name">
-                        <input type="full name" name="full name"placeholder="Full name">
-                    </div>
-                    <div class="mission-thrid-terms-contact-email">
-                        <input type="email" name="email"placeholder="Email">
-                    </div>
-                    <div class="mission-thrid-terms-contact-number">
-                        <input type="phone number" name="phone number"placeholder="Phone number">
-                    </div>
-                    <div class="mission-thrid-terms-contact-message">
-                        <input type="message" name="message" placeholder=".message">
-                    </div>
-                    <button>Send Message</buttn>
-                </div>
-            </div>
-            <div class="mission-thrid-policy">
-                <p>Privacy Policy</p>
-                <p>Cookies Policy</p>
-                <p>@ 2024 Genesis LLC All right reserved</p>
-            </div>
-        </div>
-        
+  <div class="beginning">
+    <div class="beginning__navbar">
+        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+        <ul>
+            <a href="#">Home</a>
+            <a href="#">Programs</a>
+            <a href="#">News</a>
+            <a href="#">Our Teams</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </ul>
     </div>
+    <div class="beginning__mission">
+        <h1>Our mission</h1>
+        <p>Help you rediscover the joy of <br/>living and awaken the happiness within you<br/></p>
+        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204916/ynsphk3trrzwvwehzjl2.jpg" alt="" />
+    </div>
+    <div class="beginning__charpter">
+        <div class="beginning__charpter__begins">
+            <div class="beginning__charpter__begins__text">
+                <h1>A New Charpter Begins</h1>
+                <p>We understand the concerns you may be<br/> feeling ,but remember ,it's not the end of<br/> the word. It's the beginning of a new<br/>Phase towords healing.We are here for<br/>you,for your family,every step of the<br/> way.Together,we are Writing a new<br/>Charpter filled with hope and renewal.<br/></p>
+            </div>
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/rdkyzwy0dellqjsf1jap.jpg" alt="" />
+        </div>
+        <div class="beginning__charpter__listening">
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204918/fd4bhqyqvlpqgeuhktcf.jpg" alt="" />
+            <div class="beginning__charpter__listening__beings">
+                <h1>Listening to<br>your Mentol Well-being<br></h1>
+                <p>in our mentol health clinic,we are<br>committed to caring for you well being<br>with a bold and forword -thinking<br/>approach.<br/></p>
+                <p>our seasoned experts,with a strong<br>track record,provide you with serious<br>and reassuring support. we antcipate<br/> your needs,guiding your journey with<br/> confidence and proativity.<br/></p>
+                <p>Together, lets shape a balanced and<br/> flourishing mentol future. Take the frist<br/> step toward a rewarding life becouse,<br/>with us, you mentol health is  our top<br/>priority.<br/></p>
+            </div>
+        </div>
+    </div>
+    <div class="beginning__consultation">
 
+    </div>
+    <div class="beginning__healing">
+        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+        <div class="beginning__healing__reconciliation">
+            <div class="beginning__healing__reconciliation__phrases">
+                <h1>To wards Healing<br/>and Reconciliation<br/></h1>
+                <p>In our clinic, "To wards Enlightened<br/>Freedom is not just a phrase; it's a<br/>comforting pledge through out your<br/>journey to healing.<br/></p>
+                <p>We understand that this path may seem<br/> intricate, but with out dedicated team,<br/>each step is marked by compassion and a<br/>commitment to your well-being.<br/></p>
+                <p>To our client, families,and friends, rest<br/>assured you are not alone. Together, we<br/>walk hand towords a light guided<br/>by inner healing and rediscovered<br/> freedom.<br/></p>
+            </div>
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/qi2fais2ngozl7iketxp.jpg" alt="" />
+        </div>
+        <div class="beginning__healing__resilience">
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/sc1kgtuvabgwoskr6lhz.jpg" alt="" />
+            <div class="beginning__healing__resilience__united">
+                <h1>United in<br/>Resilience<br/></h1>
+                <p>Embark with us on a healing<br/>journey where each step is <br/>marked by the strength of<br/>unity.<br/></p>
+                <p>Resilience is our common<br/>thread here. As a community,<br/>we overcame challenges<br/>together, sharing smiles and<br/>victories.<br/></p>
+                <p>Our dedicated professionnals<br>guide this union towards a<br>flourishing future.</p>
+                <p>Becouse together, we are<br/>stronger, and within this<br/> unity, resilience became a<br/>collective path towards well-<br/>being and healing.<br/></p>
+            </div>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
