--- a/index.html
+++ b/index.html
@@ -7,66 +7,94 @@
     <title>genesis</title>
 </head>  
 <body>
-  <div class="beginning">
-    <div class="beginning__navbar">
-        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
-        <ul>
-            <a href="#">Home</a>
-            <a href="#">Programs</a>
-            <a href="#">News</a>
-            <a href="#">Our Teams</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </ul>
-    </div>
-    <div class="beginning__mission">
-        <h1>Our mission</h1>
-        <p>Help you rediscover the joy of <br/>living and awaken the happiness within you<br/></p>
-        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204916/ynsphk3trrzwvwehzjl2.jpg" alt="" />
-    </div>
-    <div class="beginning__charpter">
-        <div class="beginning__charpter__begins">
-            <div class="beginning__charpter__begins__text">
-                <h1>A New Charpter Begins</h1>
-                <p>We understand the concerns you may be<br/> feeling ,but remember ,it's not the end of<br/> the word. It's the beginning of a new<br/>Phase towords healing.We are here for<br/>you,for your family,every step of the<br/> way.Together,we are Writing a new<br/>Charpter filled with hope and renewal.<br/></p>
-            </div>
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/rdkyzwy0dellqjsf1jap.jpg" alt="" />
+    <div class="team">
+        <div class="team__home">
+            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+            <ul>
+                <a href="#">Home</a>
+                <a href="#">Programs</a>
+                <a href="#">News</a>
+                <a href="#">Our Teams</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </ul>
         </div>
-        <div class="beginning__charpter__listening">
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204918/fd4bhqyqvlpqgeuhktcf.jpg" alt="" />
-            <div class="beginning__charpter__listening__beings">
-                <h1>Listening to<br>your Mentol Well-being<br></h1>
-                <p>in our mentol health clinic,we are<br>committed to caring for you well being<br>with a bold and forword -thinking<br/>approach.<br/></p>
-                <p>our seasoned experts,with a strong<br>track record,provide you with serious<br>and reassuring support. we antcipate<br/> your needs,guiding your journey with<br/> confidence and proativity.<br/></p>
-                <p>Together, lets shape a balanced and<br/> flourishing mentol future. Take the frist<br/> step toward a rewarding life becouse,<br/>with us, you mentol health is  our top<br/>priority.<br/></p>
+        <div class="team__group">
+            <h1>Our Team</h1>
+            <p>United by Devotion, Guided by Expertise. Explore the<br/>strength of our team dedicated to your well-being.<br/></p>
+        </div>
+        <div class="team__workers">
+            <div class="team__workers__departement">
+                <div class="team__workers__departement__yepmo">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460242/xsy7wrnrgw2jqmkg9fjo.jpg" alt="" />
+                    <h1>Philippe<br/>YEPMO<br/></h1>
+                    <p>CEO<br/>Neurologist Professor<br/></p>
+                </div>
+                <div class="team__workers__departement__chan">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460246/jqvhspw4mg7wcaiczgu0.jpg" alt="" />
+                    <h1>Xiu CHAN</h1>
+                    <p>Neurologist</p>
+                </div>
+                <div class="team__workers__departement__william">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460242/ufeypjshoecwbxks8zkt.jpg" alt="" />
+                    <h1>William Carter</h1>
+                    <p>Neurologist</p>
+                </div>
+                <div class="team__workers__departement__spencer">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/mxiindwzn78ucduv6ueb.jpg" alt="" />
+                    <h1>Ivy Spencer</h1>
+                    <p>Psychologist</p>
+                </div>
+                <div class="team__workers__departement__alade">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/qwp34qppcb1pnhuvwwg8.jpg" alt="" />
+                    <h1>Tamia ALADE</h1>
+                    <P>Psychologist</P>
+                </div>
+                <div class="team__workers__departement__jones">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/vqpxnjtzoziaiwg62uvl.jpg" alt="" />
+                    <h1>Alicia JONES</h1>
+                    <P>Family and Couples<br/>Therapist<br/></P>
+                </div>
+                <div class="team__workers__departement__zineb">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/qbuzyy5tel74aqz2nxra.jpg" alt="" />
+                    <h1>Zineb AOUAR</h1>
+                    <p>Mental Health Nurse</p>
+                </div>
+                <div class="team__workers__departement__aissa">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/ptrshjajkodhh52b6gpz.jpg" alt="" />
+                    <h1>Aissa DIABY</h1>
+                    <p>Mental Health Nurse</p>
+                </div>
+                <div class="team__workers__departement__victoria">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/sthksnzdp6cxsmioos7s.jpg" alt="" />
+                    <h1>Victoria Garcia</h1>
+                    <p>Mental Health<br/>Occuppatinal Therapist<br/></p>
+                </div>
+                <div class="team__workers__departement__simon">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/dzbmgkxmuux857qfv8mx.jpg" alt="" />
+                    <h1>Simon<br/>NGANNOU<br/></h1>
+                    <p>mental fitnness coach</p>
+                </div>
+                <div class="team__workers__departement__santos">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/gms4jvlfh9zertzqaik3.jpg" alt="" />
+                    <h1>Rivaldo DE<br/>SANTOS<br/></h1>
+                    <p>Mental Health<br/>Counselor<br/></p>
+                </div>
+                <div class="team__workers__departement__sonia">
+                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/gth9t0xftqinrocpkee9.jpg" alt="" />
+                    <h1>Sonia<br/>CAMPBELL<br/></h1>
+                    <p>Mental Health Advisor</p>
+                </div>
+            </div>
+        </div>
+        <div class="team__pictures">
+            <div class="team__pictures__sign">
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+            </div>
+            <div class="team__pictures__wall">
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/zrowjtrxjkhnvwq6yztl.jpg" alt="" />
             </div>
         </div>
     </div>
-    <div class="beginning__consultation">
-
-    </div>
-    <div class="beginning__healing">
-        <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
-        <div class="beginning__healing__reconciliation">
-            <div class="beginning__healing__reconciliation__phrases">
-                <h1>To wards Healing<br/>and Reconciliation<br/></h1>
-                <p>In our clinic, "To wards Enlightened<br/>Freedom is not just a phrase; it's a<br/>comforting pledge through out your<br/>journey to healing.<br/></p>
-                <p>We understand that this path may seem<br/> intricate, but with out dedicated team,<br/>each step is marked by compassion and a<br/>commitment to your well-being.<br/></p>
-                <p>To our client, families,and friends, rest<br/>assured you are not alone. Together, we<br/>walk hand towords a light guided<br/>by inner healing and rediscovered<br/> freedom.<br/></p>
-            </div>
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/qi2fais2ngozl7iketxp.jpg" alt="" />
-        </div>
-        <div class="beginning__healing__resilience">
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706204908/sc1kgtuvabgwoskr6lhz.jpg" alt="" />
-            <div class="beginning__healing__resilience__united">
-                <h1>United in<br/>Resilience<br/></h1>
-                <p>Embark with us on a healing<br/>journey where each step is <br/>marked by the strength of<br/>unity.<br/></p>
-                <p>Resilience is our common<br/>thread here. As a community,<br/>we overcame challenges<br/>together, sharing smiles and<br/>victories.<br/></p>
-                <p>Our dedicated professionnals<br>guide this union towards a<br>flourishing future.</p>
-                <p>Becouse together, we are<br/>stronger, and within this<br/> unity, resilience became a<br/>collective path towards well-<br/>being and healing.<br/></p>
-            </div>
-        </div>
-    </div>
-  </div>
 </body>
 </html>
