--- a/index.html
+++ b/index.html
@@ -7,94 +7,69 @@
     <title>genesis</title>
 </head>  
 <body>
-    <div class="team">
-        <div class="team__home">
-            <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
-            <ul>
-                <a href="#">Home</a>
-                <a href="#">Programs</a>
-                <a href="#">News</a>
-                <a href="#">Our Teams</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </ul>
-        </div>
-        <div class="team__group">
-            <h1>Our Team</h1>
-            <p>United by Devotion, Guided by Expertise. Explore the<br/>strength of our team dedicated to your well-being.<br/></p>
-        </div>
-        <div class="team__workers">
-            <div class="team__workers__departement">
-                <div class="team__workers__departement__yepmo">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460242/xsy7wrnrgw2jqmkg9fjo.jpg" alt="" />
-                    <h1>Philippe<br/>YEPMO<br/></h1>
-                    <p>CEO<br/>Neurologist Professor<br/></p>
-                </div>
-                <div class="team__workers__departement__chan">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460246/jqvhspw4mg7wcaiczgu0.jpg" alt="" />
-                    <h1>Xiu CHAN</h1>
-                    <p>Neurologist</p>
-                </div>
-                <div class="team__workers__departement__william">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460242/ufeypjshoecwbxks8zkt.jpg" alt="" />
-                    <h1>William Carter</h1>
-                    <p>Neurologist</p>
-                </div>
-                <div class="team__workers__departement__spencer">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/mxiindwzn78ucduv6ueb.jpg" alt="" />
-                    <h1>Ivy Spencer</h1>
-                    <p>Psychologist</p>
-                </div>
-                <div class="team__workers__departement__alade">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/qwp34qppcb1pnhuvwwg8.jpg" alt="" />
-                    <h1>Tamia ALADE</h1>
-                    <P>Psychologist</P>
-                </div>
-                <div class="team__workers__departement__jones">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/vqpxnjtzoziaiwg62uvl.jpg" alt="" />
-                    <h1>Alicia JONES</h1>
-                    <P>Family and Couples<br/>Therapist<br/></P>
-                </div>
-                <div class="team__workers__departement__zineb">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/qbuzyy5tel74aqz2nxra.jpg" alt="" />
-                    <h1>Zineb AOUAR</h1>
-                    <p>Mental Health Nurse</p>
-                </div>
-                <div class="team__workers__departement__aissa">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/ptrshjajkodhh52b6gpz.jpg" alt="" />
-                    <h1>Aissa DIABY</h1>
-                    <p>Mental Health Nurse</p>
-                </div>
-                <div class="team__workers__departement__victoria">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460235/sthksnzdp6cxsmioos7s.jpg" alt="" />
-                    <h1>Victoria Garcia</h1>
-                    <p>Mental Health<br/>Occuppatinal Therapist<br/></p>
-                </div>
-                <div class="team__workers__departement__simon">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/dzbmgkxmuux857qfv8mx.jpg" alt="" />
-                    <h1>Simon<br/>NGANNOU<br/></h1>
-                    <p>mental fitnness coach</p>
-                </div>
-                <div class="team__workers__departement__santos">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/gms4jvlfh9zertzqaik3.jpg" alt="" />
-                    <h1>Rivaldo DE<br/>SANTOS<br/></h1>
-                    <p>Mental Health<br/>Counselor<br/></p>
-                </div>
-                <div class="team__workers__departement__sonia">
-                    <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460241/gth9t0xftqinrocpkee9.jpg" alt="" />
-                    <h1>Sonia<br/>CAMPBELL<br/></h1>
-                    <p>Mental Health Advisor</p>
+    <div class="common">
+        <div class="common__depression">
+            <h1 id="depression">Depression</h1>
+            <p>Rising from the Shadows: Our Depression Program,<br/>Guiding Light on Your Path to Recovery.<br/></p>
+            <div class="common__depression__help">
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706645108/pexels-gerd-altmann-23180_m3chtx.jpg" alt="" />
+                <div class="common__depression__help__writtern">
+                    <p>Our depression program offers<br/>comprehensive support to help individuals<br/>overcome the challenges of depression<br/>and reclaimafulfilling life.<br/></p>
+                    <p>Our specialized professionals work in<br/>tandem with you to customize treatment,<br/>integrating innovative therapeutic<br/>approaches and compassionate guidance.<br/></p>
+                    <p>Individual sessions provide a safe space<br/>to explore thoughts and emotions, while<br/>group therapies foster shared experiences<br/>and the builiding of support bonds.</p>
+                    <p>We believe in the importance of adopting<br/>a holistic approach. The program includes<br/> elements such as stress management,<br/>promoting a healthy lifestyle, and<br/>techniques to strengthen emotional<br/> resilience.<br/></p>
                 </div>
             </div>
-        </div>
-        <div class="team__pictures">
-            <div class="team__pictures__sign">
-                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705872503/WhatsApp_Image_2024-01-15_at_09.14.46_klkslx.jpg" alt="" />
+            <div class="common__depression__pragraph">
+                <p>Together, we weave a network of hope and understanding, guiding each<br/>individual toward light and rebirth after dark times. you are not alone on this<br/>journey - let us accompany you towards a brighter life.<br/></p>
             </div>
-            <div class="team__pictures__wall">
-                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706460234/zrowjtrxjkhnvwq6yztl.jpg" alt="" />
+        </div>
+        <div class="common__anxiete">
+            <h1 id="anxiety">Anxiete</h1>
+            <h2>Illuminate your path: Our Anxiety program,<br/>a Wellspring of Serenity for Every Stride.</h2>
+            <h4>Our anxiety program is designed to provide holistic support for those seeking<br/> to overcome the challenges of anxiety and regain a balanced life.<br/></h4>
+            <h4>The experienced professionals on our team collaborate with you to develop a<br/>personalized treatment plan, combining innovative therapeutic approaches<br/>with proven techniques.<br/></h4>
+            <div class="common__anxiete__companents">
+                <div class="commmon__anxiete__companents__type">
+                    <h3>Key Companets:</h3>
+                    <p><strong>1.Comprehensive Assessment:</strong><br/>We start with a through<br/>evaluation to understand the<br/>specific factors contributing to<br/>anxiety, allowing for a targeted<br/>approach.<br/>
+                    <strong>2.Individual Therapies:</strong>Individual<br/>sessions offer a confidential<br/>space to explore anxiety<br/>triggers, develop management<br/>strategies, and enchance<br/>emotional resilience.<br/>
+                    <strong>3.Group Therapies:</strong>Group<br/>sessions provide a supportive<br/>environment,encouraging the<br/>sharing of experiences and<br/>builiding connections with others<br/>facing similar situatins.<br/>
+                    <strong>4.Stress Management<br/>Techniques:</strong>Practical tools and<br/> relaxation techniquies are<br/>integrated to help manage<br/>anxiety symptoms on a daily<br/>basis.<br/>
+                    <strong>5.Wellness Promotion:</strong>We<br/>emphasize promoting a healthy<br/>lifestyle, includin nutrition,<br/>exercise, and quality sleep, to<br/>enchance overall well-being.<br/>
+                    <strong>6.Long-Term Prevention<br/>Strategies:</strong>Our program aims to<br/>provide sustainable skills for<br/>anxiety management, fostering<br/>an enriching life in the long run.<br/></p>
+                </div>
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1705952555/pexels-mart-production-8458945_qschmu.jpg" alt="" />
+            </div>
+            <div class="common__anxiete__phobia">
+                <p>Together,we weave a network of hope and understanding, guiding each<br/>individual toward light and rebirth after dark times. You are not alone on this<br/>journey - let us accompany you towards a brighter life.<br/></p>
+            </div>
+        </div>
+        <div class="common__negative">
+            <h1 id="shadow">negative</h1>
+            <h2>Beyond Shadows: Our Negativity Program,<br/>Guiding you towards the Light of Positivity.<br/></h2>
+            <h4>Our negativity program is specially designed to assist those seeking to shift<br/>their perspective and cultivate a positive mindset.<br/></h4>
+            <h4>Guided by experienced professionals, we offer innovative approaches and<br/>well- established practices to overcome negative thought patterns and foster<br/>an optimistic state of mind.<br/></h4>
+            <div class="common__negative__positive">
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706645108/pexels-alex-green-5699756_z4ztwn.jpg" alt="" />
+                <div class="common__negative__positive__thinking">
+                    <h3>Key Companents:</h3>
+                    <p><strong>1.Personalized Assessment:</strong>we<br/> begin by understanding the specific<br/>sources of negativity, allowing for<br/>an individualized approach.<br/>
+                    <strong>2.Positive Thinking Coaching:</strong>Coaching sessions aim to identify<br/>and transform negative thoughts<br/>into positive and constructive ones.<br/>
+                    <strong>3.Congnitive-Behavioral Therapy<br/>(CBT):</strong>cbt is utilized to target<br/>negative thought patterns and<br/>promote positive changes in behavior.<br/>
+                    <strong>4.Mindfulness practices:</strong><br/>Mindfulness exercises help develop<br/>self- awareness and manage<br/>negative thoughts in a constructive<br/>way.<br/>
+                    <strong>5.Encouragement of Emotional<br/>Well-being:</strong>We explore techniques<br/>to strengthen emotional resilience<br/>and foster a positive mental<br/>balance.<br/>
+                    <strong>6.Group Workshops:</strong>Workshops<br/>encourages the sharing of<br/>experiences and the creation of <br/>mutual support to overcome<br/>negativity.<br/></p>
+                </div>
+            </div>
+            <div class="common__negative__join">
+                <h1 id="join">join us to illuminate your path towards positivity.</h1>
+                <p>Transform negativity into a driving force for an enriching life.</p>
+                <img src="https://res.cloudinary.com/dhxqidnfl/image/upload/v1706645108/pexels-jill-wellington-40815_iatj93.jpg" alt="" />
             </div>
         </div>
     </div>
+   
+   
 </body>
 </html>
